--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export && next-export-optimize-images && rm -r docs && mv out docs && touch docs/.nojekyll"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "next-export-optimize-images": "^1.9.0",
+    "sass": "^1.55.0"
   }
 }
