--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
-    "next": "12.3.1",
+    "next": "^12.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^12.0.0",
     "next-export-optimize-images": "^1.9.0",
     "sass": "^1.55.0"
   }
