--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.26.0",
+    "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.3",
     "next-export-optimize-images": "^2.0.0",
     "next-purgecss": "^4.0.0",
