--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.3",
     "next-export-optimize-images": "^2.0.0",
